<resources>
    <string name="app_name">PracticaJuegosDeintAcdat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_category">Añadir</string>
    <string name="add">Add</string>
    <string name="image">image</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="url">URL</string>
    <string name="fecha_de_lanzamiento">Fecha de Lanzamiento</string>
    <string name="jugadores">Jugadores</string>
    <string name="duracion">Duracion</string>
    <string name="nombre">Nombre</string>
    <string name="drop">DROP</string>
    <string name="cancel">Cancel</string>
    <string name="crearCategoria">Crear Categoria</string>
</resources>